# WDSF

./: README.md  libtest.py  pyproject.toml  standardfile.wdsf  wdsflib.py
wdsflib/: __init__.py
