[project]
name = "wdsf"
version = "1.0.2"
description = "Wyatt's Data Storage Format"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wyatt Brashear", email = "admin@wyattb.dev"}
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["wdsflib"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
